# smol_LM

./: .gitignore  README.md  bigram.py  main.py  pyproject.toml  requirements.txt
implementations/: bigram.py  bigram_attention.py  change_log.md
public/implementations/: bigram_attention.py  smol_v1.py
public/outputs/: smol_v1.txt
public/test_notebooks/: test.ipynb
test_notebooks/: test.ipynb
