[project]
name = "smol-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupytext>=1.19.1",
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.1",
    "jupyter-client>=8.8.0",
    "jupytext>=1.19.1",
    "pillow>=12.2.0",
    "pynvim>=0.6.0",
    "pyperclip>=1.11.0",
]
